--- a/src/main/resources/templates/navigator.html
+++ b/src/main/resources/templates/navigator.html
@@ -109,19 +109,24 @@
                         </a>
 
                         <ul class="nav nav-treeview">
-
+                            <li class="nav-item">
+                                <a href="/evaluationIndexSetting" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>指标设置</p>
+                                </a>
+                            </li>
                             <li class="nav-item">
                                 <a href="/satisfactionCalculating" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>满意度录入</p>
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a href="/satisfactionAnalyzing" class="nav-link">
-                                    <i class="far fa-circle nav-icon"></i>
-                                    <p>满意度分析</p>
-                                </a>
-                            </li>
+<!--                            <li class="nav-item">-->
+<!--                                <a href="/satisfactionAnalyzing" class="nav-link">-->
+<!--                                    <i class="far fa-circle nav-icon"></i>-->
+<!--                                    <p>满意度分析</p>-->
+<!--                                </a>-->
+<!--                            </li>-->
                         </ul>
                     </li>
 
@@ -168,16 +173,16 @@
                         </ul>
                     </li>
 
-                    <li class="nav-item has-treeview">
-                        <a href="#" class="nav-link">
-                            <i class="nav-icon fas fa-edit"></i>
-                            <p>
-                                酒店决策
-                                <i class="right fas fa-angle-left"></i>
-                            </p>
-                        </a>
+<!--                    <li class="nav-item has-treeview">-->
+<!--                        <a href="#" class="nav-link">-->
+<!--                            <i class="nav-icon fas fa-edit"></i>-->
+<!--                            <p>-->
+<!--                                酒店决策-->
+<!--                                <i class="right fas fa-angle-left"></i>-->
+<!--                            </p>-->
+<!--                        </a>-->
 
-                    </li>
+<!--                    </li>-->
 
 
                 </ul>
