--- a/src/main/resources/templates/value_analyse.html
+++ b/src/main/resources/templates/value_analyse.html
@@ -68,7 +68,7 @@
                                 </thead>
                                 <tbody>
                                 <div th:if="${clientValues}!=null">
-                                    <tr th:each="info,infoStat: ${clientValues}">
+                                    <tr th:each="info,infoStat: ${clientValues}" onclick="choose_this_row()">
                                         <td th:text="${info.clientId}"></td>
                                         <td th:text="${info.name}"></td>
                                         <td th:text="${info.phoneNumber}"></td>
@@ -146,7 +146,12 @@
             $(this).toggleClass("focus");//设定当前行为选中行
         });
     });
-
+    function choose_this_row() {
+        $("#example1>tbody>tr").on("click", function () {
+            $(this).parent().find("tr.focus").toggleClass("focus");//取消原先选中行
+            $(this).toggleClass("focus");//设定当前行为选中行
+        });
+    }
 
 
     /**
